   -febcdic-table=alternate.

** the compile flag -fodoslide was moved to a dialect configuration,
   while -fodoslide still works as before it is now implied with
   -std=ibm/mvs/bs2000, if you use those dialects consider to recompile
   affected programs (with OCCURS DEPENDING ON) or compile with additional
   -fno-odoslide to get the same results as with older GnuCOBOL versions

** the compile flag -fdefaultbyte (initializarion for data-items without
   an explicit VALUE) was moved to a dialect configuration;
   while -fdefaultbyte still works as before it is now implied as binary
   zero with -std=ibm/mvs/bs2000/realia, space for -std=mf/acu/rm, and
   no defined initialization for -std=cobol85/cobol2002/cobol2014/xopen,
   it is unchanged for -std=default (initialize to PICTURE/USAGE);
   for compatibility to previous behavior compile with -fdefaultbyte=init;
   note that initialization for INDEXED BY items honors the defaultbyte
   configuration now, too

** the dialect configuration option larger-redefines-ok was replaced by
   the support option larger-redefines; if specified on the command-line
   it is now -f[no-]larger-redefines instead of -f[no-]larger-redefines-ok,
   which allows to also raise a warning for those with -flarger-redefines=warn
   Note: the short one works both in current and older versions of cobc

** the subscript checking enabled with -fec=bound-subscript (implied with
   --debug) now generates checks depending on the new dialect configuration
   option subscript-check if OCCURS DEPNDING ON is used;
   the full check according to ISO COBOL, which checks against the ODO item
   is still used in the default dialect, but several dialects now only check
   against the maximum only

** the GnuCOBOL extension of auto-adding the RECURSIVE attribute
   if a program potentially calls its own PROGRAM-ID was moved
   to a dialect option; it is now only active with -std=default
   (and raises a warning as previously with -Wextra); if you want