@@ -197,6 +197,9 @@ dpc-in-data:			xml
 # Bounds against which to check subscripts (full, max, record)
 subscript-check:		max # not verified, may need "record"
 
+# Functionality of JUSTIFY for INITIALIZE verb and initialization of storage
+init-justify:		no
+
 # Dialect features
 # Value: 'ok', 'warning', 'archaic', 'obsolete', 'skip', 'ignore', 'error',
 #        'unconformable'
