@@ -195,6 +195,9 @@ dpc-in-data:			xml
 # Bounds against which to check subscripts (full, max, record)
 subscript-check:		max # TODO: "record"
 
+# Functionality of JUSTIFY for INITIALIZE verb and initialization of storage
+init-justify:		yes
+
 # Dialect features
 # Value: 'ok', 'warning', 'archaic', 'obsolete', 'skip', 'ignore', 'error',
 #        'unconformable'
