@@ -433,6 +433,7 @@ test.conf: missing definitions:
 	no definition of 'binary-truncate'
 	no definition of 'complex-odo'
 	no definition of 'odoslide'
+	no.definition of 'init-justify'
 	no definition of 'indirect-redefines'
 	no definition of 'relax-syntax-checks'
 	no definition of 'ref-mod-zero-length'
