@@ -6463,7 +6463,7 @@ AT_DATA([prog.cob], [
        INIZIO.
            IF VAR1 = (VAR2 AND VAR3 AND VAR4)
               DISPLAY "TRUE 1"
-	   END-IF
+           END-IF
            IF VAR1 NOT = (VAR2 AND VAR3 AND VAR4)
               DISPLAY "TRUE 2"
            END-IF
@@ -6506,5 +6506,50 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
 [prog.cob:8: error: syntax error, unexpected Identifier
 ])
+
+AT_CLEANUP
+
+
+AT_SETUP([MOVE with JUSTIFIED clause])
+AT_KEYWORDS([RIGHT])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. JUST00.
+
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+
+       77  ELE                         PIC X(10) JUSTIFIED RIGHT.
+       77  SHORT                       PIC X(4)  VALUE 'ABC '.
+       77  LONG                        PIC X(16)
+               VALUE 'ABCDEFGHIGKLMNOP'.
+
+       PROCEDURE DIVISION.
+           MOVE 'ABC '                 TO ELE
+           IF ELE NOT EQUAL '      ABC '
+               DISPLAY 'MOVE WITH SHORT FIELD JUSTIFIED HAS FAILED: '
+               '"' ELE '"'.
+
+           MOVE 'ABCDEFGHIGKLMNOP'     TO ELE
+           IF ELE NOT EQUAL 'GHIGKLMNOP'
+               DISPLAY 'MOVE WITH LONG FIELD JUSTIFIED HAS FAILED: '
+               '"' ELE '"'.
+
+           MOVE SHORT                  TO ELE
+           IF ELE NOT EQUAL '      ABC '
+               DISPLAY 'MOVE WITH SHORT FIELD JUSTIFIED HAS FAILED: '
+               '"' ELE '"'.
+
+           MOVE LONG                   TO ELE
+           IF ELE NOT EQUAL 'GHIGKLMNOP'
+               DISPLAY 'MOVE WITH LONG FIELD JUSTIFIED HAS FAILED: '
+               '"' ELE '"'.
+
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE -Wno-truncate prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 
 AT_CLEANUP
